tests/ui/feature-gates/feature-gate-f32_from_f16.stderr
error[E0658]: use of unstable library feature `f32_from_f16`
  --> $DIR/feature-gate-f32_from_f16.rs:5:25
   |
LL |     let _: f32 = 1.0f16.into();
   |                         ^^^^
   |
   = help: add `#![feature(f32_from_f16)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: required for `f32` to implement `From<f16>`
   = note: required for `f16` to implement `Into<f32>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
